Fix the inner block spacing

--- a/_scss/layout/_prenet.scss
+++ b/_scss/layout/_prenet.scss
@@ -271,7 +271,7 @@ body.prenet {
     }
 
     &.data {
-      margin-top: 43px;
+      margin-top: 25px;
       border: 1px solid #ddd;
       width:100%;
       background-color: #ffffff;
@@ -685,7 +685,6 @@ body.prenet {
     flex-wrap: wrap;
 
     figure {
-      margin-top: 45px;
       width: 100%;
     }
 
@@ -695,7 +694,7 @@ body.prenet {
       -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
       flex-grow: 1;
-      margin: 45px 45px 0 0;
+      margin: 25px 45px 0 0;
       padding: 8px 5px 5px 12px;
       background-color: #ffffff;
       border: 1px solid #c0c5cb;
@@ -957,7 +956,7 @@ select {
   display: inline-block;
   position: relative;
   width: 100%;
-  margin-top: 30px;
+  margin-top: 25px;
   vertical-align: middle;
   overflow: hidden;
 }
